--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <div class="app-container">
 
   </div>
+  <style src="index.scss"></style>
   <script src="index.jsx" type="module"></script>
 </body>
 
