--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div class="app-container"></div>
+  <div class="app-container" />
   <script src="index.jsx" type="module"></script>
 </body>
 
